# GMMap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: README.md  gmm_map_cuda_no_viz.cpp  gmm_map_cuda_viz.cpp  gmm_map_no_viz.cpp  gmm_map_viz.cpp
example/indoor/: tartanair.json  tum.json
example/outdoor/: tartanair.json
include/gmm_map/: Visualization.h  cluster.h  cluster_ops.h  commons.h  evaluation.h  map.h  map_param.h  map_param_init.h
include/gmm_map_cuda/: buffer.cuh  cluster.cuh  cuda_common.cuh  cuda_param.cuh  map.cuh  map.h  map_param.cuh  map_param_init.h  matrix.cuh
include/path_planning/: path_planner.h  path_planner_param_init.h
libs/colormap/: CMakeLists.txt  README.md
libs/colormap/include/colormap/: colormap.h  divcolorbase.h  pltcolorbase.h  seqcolorbase.h
libs/dataset_utils/: CMakeLists.txt  README.md
libs/dataset_utils/include/dataset_utils/: dataset_utils.h
libs/dataset_utils/src/: dataset_utils.cpp
libs/nigh/: CMakeLists.txt
libs/nigh/test/: sampler_cartesian.hpp
libs/rtree/: CMakeLists.txt  README.md
libs/rtree/include/RTree/: RTree.cpp  RTree.h
path_planning_example/: gmm_path_planning_viz.cpp
path_planning_example/indoor/: tartanair.json  tum.json
resources/: colorMap.filamat  defaultLit.filamat  defaultLitSSR.filamat  defaultLitTransparency.filamat  defaultUnlit.filamat  defaultUnlitTransparency.filamat  depth.filamat  depth_value.filamat  img_blit.filamat  infiniteGroundPlane.filamat  normals.filamat  pointcloud.filamat  ui_blit.filamat  unlitBackground.filamat  unlitGradient.filamat  unlitLine.filamat  unlitPolygonOffset.filamat  unlitSolidColor.filamat
src/gmm_map/: SPGFExtended.cpp  Visualization.cpp  cluster_ops.cpp  cluster_serialize.cpp  evaluation.cpp  map.cpp  map_param.cpp  map_param_init.cpp  map_serialize.cpp
src/gmm_map_cuda/: SPGFExtended.cpp  cluster.cu  map.cpp  map.cu  map_param_init.cpp  matrix.cu
src/path_planning/: path_planner.cpp  path_planning_param_init.cpp
